# ornate

./: README.md
contracts/: Anchor.toml
contracts/programs/auction/: Cargo.toml
contracts/programs/auction/src/: lib.rs
contracts/programs/contracts/src/: lib.rs
contracts/programs/products/: Cargo.toml
contracts/programs/products/src/: lib.rs
frontend/: index.html  package-lock.json  package.json
frontend/src/idl/: contracts.json  dutch_auction.json  product_purchase.json
frontend/src/pages/: AuctionPage.jsx  CheckoutPage.jsx
key/: key.json
