[package]
name = "products"
version = "0.1.0"
description = "Product contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "products"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
